# metapathology

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  justfile  prek.toml  pyproject.toml  zensical.toml
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  deep-benchmark.yml  docs.yml  release.yml  test.yml  testpypi.yml
docs/: api.md  attachment.md  capture.md  concepts.md  configuration.md  development.md  frozen.md  index.md  json.md  limitations.md  migration-0.6.md  performance.md  report-presentation-design.md  report.md  roadmap.md  speculative-replay-design.md  startup.md  usage.md
docs/internal/: architecture-improvement-opportunities.md  cooperative-finder-pattern.md  diagnostic-improvements-plan.md  doc-rewrite-issues.md  import-callable-wrapper-idea.md  roadmap.md  schema-major-bump.md  speculative-replay-design.md  writing-guide.md
reproductions/: README.md
reproductions/beartype-269/: README.md  pyproject.toml  reproduce.ps1
reproductions/beartype-556/: README.md  invoke.py  pyproject.toml  reproduce.ps1  validate_report.py
reproductions/beartype-556/src/myproject/: __init__.py
reproductions/beartype-638/: README.md  pyproject.toml  reproduce.ps1  validate_report.py
reproductions/beartype-638/src/bt_repro/: __init__.py  bar.py  foo.py
reproductions/beartype-638/tests/: test_foo.py
reproductions/beartype-pyinstaller-frozen/: README.md  app.py  app_metapathology.py  pyproject.toml  report.txt  reproduce.ps1  reproduce.sh  rth_beartype_frozen.py
reproductions/bifrost-418-precedence/: README.md  bug_report.md  control.py  pyproject.toml  report.txt  reproduce.ps1  reproduce.py  reproduce.sh
reproductions/discord-py-10017/: README.md  ext.py  invoke.py  pyproject.toml  reproduce.ps1
reproductions/distributed-7782/: README.md  invoke.py  pyproject.toml  reproduce.ps1
reproductions/importlib-metadata-486/: README.md  invoke.py  pyproject.toml  reproduce.ps1
reproductions/importlib-resources-311/: README.md  install_finder.py  invoke.py  pyproject.toml  reproduce.ps1
reproductions/meson-python-871/: README.md  meson.build  pyproject.toml  reproduce.ps1  reproduce.sh
reproductions/meson-python-871-no-uv/: README.md  invoke.py  pyproject.toml  reproduce.ps1  reproduce.sh
reproductions/mosquito-cfd-22/: README.md  bug_report.md  pyproject.toml  report.txt  reproduce.ps1  reproduce.sh
reproductions/mosquito-cfd-22/src/eager_source/: __init__.py  normalization.py  table.py
reproductions/mosquito-cfd-22/tests/: test_normalization.py
reproductions/pip-11812/: README.md  invoke.py  pyproject.toml  reproduce.ps1
reproductions/pwntools-2737/: README.md  invoke.py  pyproject.toml  reproduce.ps1
reproductions/pytest-12179/: README.md  conftest.py  invoke.py  pyproject.toml  reproduce.ps1
reproductions/pytest-12179/tests/repro_pkg/: __init__.py  test_value.py
reproductions/rules-python-2009/: README.md  bug_report.md  pyproject.toml  reproduce.ps1  reproduce.py  reproduce.sh
reproductions/scikit-build-core-1482/: CMakeLists.txt  README.md  invoke.py  pyproject.toml  reproduce.ps1
reproductions/scikit-build-core-1482/core-package/: pyproject.toml
reproductions/scikit-build-core-1482/core-package/src/mqt/core/: __init__.py
reproductions/scikit-build-core-1482/python/mqt/ddsim/: __init__.py  binding.py
reproductions/setuptools-3073/: .gitignore  README.md  invoke.py  pyproject.toml  reproduce.ps1
reproductions/wrapt-1150/: README.md  invoke.py  pyproject.toml  reproduce.ps1
scripts/: _benchmark_cli.py  _benchmark_worker.py  benchmark.py  generate_report_schema.py
src/metapathology/: __init__.py  __main__.py  _attachment.py  _attachment_agent.py  _attachment_process.py  _attachment_protocol.py  _branch_exploration.py  _config.py  _deep_diagnostics.py  _detailed_capture.py  _displaced_finder_check.py  _displaced_finder_probe.py  _early_bootstrap.py  _finder_attribution.py  _frozen_bootstrap.py  _importer_cache.py  _instrumented_list.py  _module_metadata.py  _monitor.py  _monitor_model.py  _record.py  _records.py  _report.py  _report_analysis.py  _report_capture.py  _report_data.py  _report_events.py  _report_json.py  _report_model.py  _report_schema.py  _report_text.py  _report_text_context.py  _runtime.py  _spec.py  _speculative_replay.py  frozen_bootstrap.py  report.schema.json  site_bootstrap.py
tests/: __init__.py  conftest.py  test_benchmark_cli.py  test_causal_synthesis.py  test_cli.py  test_config.py  test_counterfactual_replay.py  test_deep_diagnostics.py  test_deep_import_calls.py  test_finder_contracts.py  test_freezer_integrations.py  test_frozen_bootstrap.py  test_importer_cache.py  test_loader_inventory.py  test_module_identity.py  test_monitor.py  test_package.py  test_path_hooks.py  test_records.py  test_report.py  test_report_color.py  test_report_streaming.py  test_report_text.py  test_schema_vocabulary.py  test_site_bootstrap.py  test_spec_comparison.py  test_speculative_replay.py  test_standard_resolution.py  test_structured_report.py  test_support.py  test_sys_path.py  test_timeline.py
tests/analysis/: __init__.py  test_causal_synthesis.py  test_counterfactual_replay.py  test_displaced_finder_check.py  test_displaced_finder_probe.py  test_module_identity.py  test_spec_comparison.py  test_speculative_replay.py  test_standard_resolution.py
tests/fixtures/: __init__.py
tests/freezers/: fixture_app.py
tests/monitoring/: __init__.py  test_deep_import_calls.py  test_deep_outcomes.py  test_deep_path_machinery.py  test_detailed_import_calls.py  test_detailed_import_results.py  test_detailed_path_machinery.py  test_finder_apis.py  test_finder_contracts.py  test_finder_instrumentation.py  test_importer_cache.py  test_meta_path.py  test_monitor_concurrency.py  test_monitor_lifecycle.py  test_path_hooks.py  test_records.py  test_sys_path.py  test_unsafe_import_branch_exploration.py
tests/reporting/: __init__.py  test_loader_inventory.py  test_report_color.py  test_report_streaming.py  test_report_text.py  test_schema_vocabulary.py  test_structured_report.py  test_timeline_capture.py  (+1 more)
(+115 files in other folders)
