[project]
name = "metapathology"
version = "0.1.0"
description = "sys.meta_path diagnostics: find out who is messing with Python's import machinery"
readme = "README.md"
authors = [
    { name = "Glinte", email = "96855131+Glinte@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
