[project]
name = "metapathology"
version = "0.1.0"
description = "sys.meta_path diagnostics: find out who is messing with Python's import machinery"
readme = "README.md"
authors = [
    { name = "Glinte", email = "96855131+Glinte@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "hypothesis>=6.146",
    "prek>=0.2.20",
    "pyrefly>=0.44.0",
    "pytest>=8.3",
    "pytest-cov>=6.3",
    "pytest-timeout>=2.4",
    "ruff>=0.12.11",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
testpaths = ["tests"]
timeout = 30
xfail_strict = true

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "RUF",
    "PT",
    "RET",
    "SIM",
    "PERF",
]

[tool.ruff.format]
docstring-code-format = true

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.*"]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportMissingParameterType = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py"]
python-version = "3.10"

[tool.coverage.run]
branch = true
source = ["metapathology"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
