[project]
name = "metapathology"
version = "0.2.1"
description = "Diagnose which finders handle imports and how sys.meta_path changes"
readme = "README.md"
authors = [
    { name = "Glinte", email = "96855131+Glinte@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = [
    "debugging",
    "import hooks",
    "sys.meta_path",
    "sys.path_hooks",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
metapathology = "metapathology.__main__:main"

[project.urls]
Documentation = "https://glinte.github.io/metapathology/"
Homepage = "https://github.com/Glinte/metapathology"
Source = "https://github.com/Glinte/metapathology"
Issues = "https://github.com/Glinte/metapathology/issues"

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "hypothesis>=6.146",
    "prek>=0.2.20",
    "pyrefly>=0.44.0",
    "pytest>=8.3",
    "pytest-cov>=6.3",
    "pytest-timeout>=2.4",
    "ruff>=0.12.11",
]
# Zensical is isolated from the development toolchain because it is needed
# only to build and publish the user documentation site.
docs = [
    "zensical>=0.0.47,<0.1",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
testpaths = ["tests"]
timeout = 30
xfail_strict = true

[tool.uv]
default-groups = ["dev"]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "RUF",
    "PT",
    "RET",
    "SIM",
    "PERF",
]

[tool.ruff.format]
docstring-code-format = true

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.*"]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportMissingParameterType = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py"]
python-version = "3.10"

[tool.coverage.run]
branch = true
source = ["metapathology"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
