[project]
name = "metapathology-importlib-metadata-486-repro"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "importlib_metadata==4.13.0",
    "metapathology",
]

[tool.uv]
exclude-newer = "2026-07-08"
package = false

[tool.uv.sources]
metapathology = { path = "../..", editable = true }
